Docs - fix text cutoff issue in Firefox
Firefox handles flex differently than Chrome. When flex is set to 1,
the flex item does not respect the flex container's bounds, causing
text to be cutoff.

Bug 5339.

--- a/doc/html/style.css
+++ b/doc/html/style.css
@@ -737,7 +737,7 @@ input[type="checkbox"] {
 	}
 
 	.content {
-		flex: 1;
+		flex: auto;
 		width: calc(100% - 360px);
 		float: right;
 	}
